fixed phone alignment

--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ textarea {
   float: left;
   width: 50%;
   padding: 10px;
-  height: 510px; }
+  height: 575px; }
 
 .column_ {
   float: left;
